--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
   </body>
 </html>
 <script>
-  $(document).ready(function() {
-    var jsonData = [];
+  $(document).ready(function () {
+    let jsonData = [];
     $.ajax({
       type: "GET",
       url: "https://corona-api.com/countries",
-      dataType: "jsonp",
-      success: function(result) {
-        _.foreach(result.data, function(elem) {
+      dataType: "json",
+      success: function (result) {
+        _.forEach(result.data, function (elem) {
           $("#country").append(
             "<option value=" + elem.code + ">" + elem.name + "</option>"
           );
         });
       },
-      error: function(error) {
+      error: function (error) {
         console.log(console.error());
-      }
+      },
     });
   });
 </script>
