--- a/index.html
+++ b/index.html
@@ -5,54 +5,122 @@
     <title>COVID-19 TRACKER</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js"></script>
-  </head>
-  <body>
-    <div class="main">
-      <div class="header">
-        <h3>COVID-19 TRACKER</h3>
-      </div>
-      <div class="search">
-        <select name="country" id="country">
-          <option value="#">--SELECT COUNTRY--</option>
-        </select>
-      </div>
-      <div id="confirmed">
-        <span id="confirmedCount"></span>
-      </div>
-      <div id="recovered">
-        <span id="recoveredCount"></span>
-      </div>
-      <div id="death">
-        <span id="deathCount"></span>
-      </div>
-    </div>
-  </body>
-</html>
-<script>
-  $(document).ready(function() {
-    let jsonData = [];
-    $.ajax({
-      type: "GET",
-      url: "https://corona-api.com/countries",
-      dataType: "json",
-      success: function(result) {
-        jsonData = result;
-        _.forEach(result.data, function(elem) {
-          $("#country").append(
-            "<option value=" + elem.code + ">" + elem.name + "</option>"
-          );
-        });
-      },
-      error: function(error) {
-        console.log(console.error());
-      }
-    });
-    $("#country").change(function() {
-      var selectedCountry = $("#country").val();
-      var selectedCountryData = _.filter(jsonData.data, {
-        code: selectedCountry
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"
+    >
+            </script
+              </head>
+              <body>
+                <div class="main">
+                  <div id="header">
+                    <h3>COVID-19 TRACKER</h3>
+                  </div>
+                  <br />
+                  <div id="content">
+                    <div id="search">
+                      <select name="country" id="country">
+                        <option value="#">--SELECT COUNTRY--</option>
+                      </select>
+                    </div>
+                    <div id="confirmed" class="row">
+                      <h3>Confirmed</h3>
+                      <span id="confirmedCount"></span>
+                    </div>
+                    <div id="recovered" class="row">
+                      <h3>Recovered</h3>
+                      <span id="recoveredCount"></span>
+                    </div>
+                    <div id="death" class="row">
+                      <h3>Deaths</h3>
+                      <span id="deathCount"></span>
+                    </div>
+                    <div class="chart-container">
+                      <canvas id="country-barchart"> </canvas>
+                    </div>
+                  </div>
+                </div>
+              </body>
+            </html>
+            <script>
+              let jsonData = [];
+              $(document).ready(function() {
+                var ctx1 = $('#country-barchart');
+                $.ajax({
+                  type: "GET",
+                  url: "https://corona-api.com/countries",
+                  dataType: "json",
+                  success: function(result) {
+                    jsonData = result;
+                    _.forEach(result.data, function(elem) {
+                      $("#country").append(
+                        "<option value=" + elem.code + ">" + elem.name + "</option>"
+                      );
+                    });
+                  },
+                  error: function(error) {
+                    console.log(console.error());
+                  }
+                });
+                setTimeout(() => {
+                  $("#country")
+                    .prop("selectedIndex", 1)
+                    .trigger("change");
+                }, 100);
+                $("#country").change(function() {
+                  var selectedCountryCode = $("#country").val();
+                  var selectedCountryName = $("#country :selected").text();
+                  var selectedCountryData = _.filter(jsonData.data, {
+                    code: selectedCountryCode
+                  });
+                  var confirmedData = selectedCountryData[0].latest_data.confirmed;
+                  var recoveredData = selectedCountryData[0].latest_data.recovered;
+                  var deathData = selectedCountryData[0].latest_data.deaths;
+                  $("#confirmedCount").text(confirmedData);
+                  $("#recoveredCount").text(recoveredData);
+                  $("#deathCount").text(deathData);
+
+                  generateBarChart(ctx1, ["Confirmed", "Recovered", "Deaths"], [confirmedData,recoveredData,deathData], "Covid-19 cases in " + selectedCountryName)
+                });
+              });
+              function generateBarChart(canvas,label,data,title ){
+                var myChart = new Chart(canvas, {
+          type: 'bar',
+          data: {
+              labels: label,
+              datasets: [{
+                  label: '# of cases',
+                  data: data,
+                  backgroundColor: [
+                      'rgba(255, 99, 132, 0.2)',
+                      'rgba(54, 162, 235, 0.2)',
+                      'rgba(255, 206, 86, 0.2)',
+                      'rgba(75, 192, 192, 0.2)',
+                      'rgba(153, 102, 255, 0.2)',
+                      'rgba(255, 159, 64, 0.2)'
+                  ],
+                  borderColor: [
+                      'rgba(255, 99, 132, 1)',
+                      'rgba(54, 162, 235, 1)',
+                      'rgba(255, 206, 86, 1)',
+                      'rgba(75, 192, 192, 1)',
+                      'rgba(153, 102, 255, 1)',
+                      'rgba(255, 159, 64, 1)'
+                  ],
+                  borderWidth: 1
+              }]
+          },
+          options: {
+              scales: {
+                  yAxes: [{
+                      ticks: {
+                          beginAtZero: true
+                      }
+                  }]
+              }
+          }
       });
-      $("#confirmedCount").text(selectedCountryData[0].latest_data.confirmed);
-    });
-  });
-</script>
+              }
+    </script>
+  </head>
+</html>
