--- a/CovidFactQuiz/index.html
+++ b/CovidFactQuiz/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Covid Facts and Quiz</title>
-    <!-- Bootstrap css and my own css -->
+    <!-- Bootstrap and css -->
     <link rel="stylesheet" 
         href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" 
         integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" 
@@ -106,10 +106,7 @@
                 <div class="col-xs-8">
                     <h2>Progress:</h2>
                     <div class="btn-toolbar">
-                        <!-- ng-repeat to loop throuh all questions and display the button markup for each -->
-		                <!-- ng-class conditionally displaying bootstrap classes when a question has been answered or not -->
-		                <!-- ng-click to call method setActiveQuestion to move to selected question -->
-		                <!-- the $index argument is an angular variable that contains the index of the current ng-repeat iteration -->
+
                         <button class="btn"
                             ng-repeat="question in quiz.dataService.quizQuestions"
                             ng-class="{'btn-info': question.selected !== null, 'btn-danger': question.selected === null}" 
@@ -151,15 +148,9 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <!-- angular {{}} notation for expressions to be evaluated -->
-		                    <!-- adds 1 to activeQuestion as it is zero index. Then displays the question -->
-		                    <!-- will be in the form of "3. this is the third question" -->
-		                    <!-- where the 3. is the incremented activeQuestion -->
+
                             <h4>{{quiz.activeQuestion+1 + ". " + quiz.dataService.quizQuestions[quiz.activeQuestion].text}}</h4>
-                            <!-- ng-if will only render the below markup when true. Unlike ng-show or ng-hide which -->
-		                    <!-- simply doesnt show the markup, but it is still rendered in the source. -->
-		                    <!-- ng-if will not even render the markup -->
-		                    <!-- this is done in the below two sections to aviod a url being displayed as a question -->
-		                    <!-- or text being entered as an image url and causing issues -->
+
                             <div class="row"
                                 ng-if="quiz.dataService.quizQuestions[quiz.activeQuestion].type === 'text'">
                                 <div class="col-sm-6" ng-repeat="answer in quiz.dataService.quizQuestions[quiz.activeQuestion].possibilities">
@@ -170,9 +161,7 @@
                                     </h4>
                                 </div>
                             </div>
-		                    <!-- notice the ng-if being used again -->
-		                    <!-- only the below section or the above section will display, never both -->
-		                    <!-- this will depend on if the current question is set to image or text -->
+
                             <div class="row"
                                 ng-if="quiz.dataService.quizQuestions[quiz.activeQuestion].type === 'image'">
                                 <!-- more bootstrap and another ng-repeat, this time looping through the possible answers -->
@@ -216,22 +205,12 @@
                <div class="col-xs-8">
                    <h2>Results:</h2>
                    <div class="btn-toolbar">
-                    	<!-- ng-repeat used again to loop through the possible answers to thequestions which are stored on -->
-		                <!-- the controller. The controller got that data from the quiz factory in js/factory/quiz.js -->
 
-		                <!-- ng-class is another angular directive. This directive will add a class to the element based  -->
-		                <!-- on the conditional it is provided. In this case it will add btn-sucess class if question.correct -->
-		                <!-- is true and will add btn-danger class if question.correct is false -->
-
-		                <!-- ng-click is again used to trigger a method on the controller called setActiveQuestion -->
-		                <!-- the method is passed the $index as an argument. $index is built into angular and holds -->
-		                <!-- the current index of the ng-repeat loop -->
                        <button class="btn"
                            ng-repeat="question in results.dataService.quizQuestions"
                            ng-class="{'btn-success': question.correct, 'btn-danger': !question.correct}"
                            ng-click="results.setActiveQuestion($index)">
-                            <!-- display glyphicons -->
-                        	<!-- ng-class is utilsed again to style the glyphicons conditionally -->
+
                             <span class="glyphicon"
                                 ng-class="{'glyphicon-ok': question.correct, 'glyphicon-remove': !question.correct}"></span>
                        </button>
@@ -272,10 +251,7 @@
                <div class="well well-sm">
                    <div class="row">
                        <div class="col-xs-12">
-		                    <!-- the below may look strange. -->
-		                    <!-- the angular expression will add 1 to the active question, because it is 0 index -->
-		                    <!-- it then displays it with a . after it followed by the question. -->
-		                    <!-- something like this "3. This is the third question:" -->
+
                            <h4>{{results.activeQuestion+1 +". "+results.dataService.quizQuestions[results.activeQuestion].text}}</h4>
                            <div class="row"
                                ng-if="results.dataService.quizQuestions[results.activeQuestion].type === 'text'">
